# IFMO-Multithreading

./: .gitignore
Lab01/: CMakeLists.txt  main.cpp  matrix1.txt  matrix2.txt  omp_tester.cpp  omp_tester.h  runGCC.bat  runVS.bat  Отчет Трофимов М4106.xlsx
Lab02/: m_matrix.cpp  m_matrix.h  m_vector.cpp  m_vector.h  main.cpp  matrix10.txt  matrix100.txt  matrix200.txt  matrix400.txt  mpi_tester.cpp  mpi_tester.h  result.txt  runLocal.bat  runTests.bat  Отчет Трофимов М4106.xlsx
Lab03/: is_sorted.py  main.cpp  mpi_tester.cpp  mpi_tester.h  random.h  runLocal.bat  runTests.bat  runTestsLocal.bat  startSMPD.bat  Отчет Трофимов М4106.xlsx
Lab04/: input.txt  main.cpp  matrix.cpp  matrix.h  omp_tester.cpp  omp_tester.h  random.h  run.bat  Отчет Трофимов М4106.xlsx
